<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".animation.AnimatorSetActivity">

    <ImageView
        android:id="@+id/volleyBall1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/volley_ball_for_doing_animation"
        android:src="@drawable/ic_volleyball_24"
        app:layout_constraintBottom_toTopOf="@id/oneByOneButton"
        app:layout_constraintEnd_toEndOf="@id/oneByOneButton"
        app:layout_constraintStart_toStartOf="@id/oneByOneButton" />

    <ImageView
        android:id="@+id/volleyBall2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/volley_ball_for_doing_animation"
        android:src="@drawable/ic_volleyball_24"
        app:layout_constraintEnd_toEndOf="@id/sameTimeButton"
        app:layout_constraintStart_toStartOf="@id/sameTimeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oneByOneButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/one_by_one"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sameTimeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sameTimeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/same_time"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/oneByOneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/oneByOneButton"
        app:layout_constraintTop_toTopOf="@id/oneByOneButton" />

</androidx.constraintlayout.widget.ConstraintLayout>